--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -11,3 +11,9 @@ $gs-gray-medium: #d3d3d3;
 $gs-gray-dark: #8f8f8f;
 $gs-black-medium: #666666;
 $gs-black: black;
+
+//color spinner
+
+$spinner-color_1: #08a0e9;
+$spinner-color_2: #e8f5fd;
+$spinner-color_3: #0084b4;
