--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -17,3 +17,16 @@ $gs-black: black;
 $spinner-color_1: #08a0e9;
 $spinner-color_2: #e8f5fd;
 $spinner-color_3: #0084b4;
+
+//window-size
+$small: 576px;
+$medium: 768px;
+$large: 1024px;
+
+//responsive-size
+$small-desktop: 960px;
+$large-desktop: 1200px;
+$handheld: 768px;
+$handhelds-landscape: 1024px;
+$mobile: 480px;
+$mobile-landscape: 768px;
