--- a/src/components/ListOfTweets/listOfTweets.scss
+++ b/src/components/ListOfTweets/listOfTweets.scss
@@ -1,19 +1,22 @@
+@import '../../styles/base/mixins.scss';
+
 .grid-container {
   padding: 0.5em 0;
   grid-template-columns: minmax(auto, 100%);
   display: grid;
   justify-content: center;
   & .grid-item-tweets {
-    // display: grid;
-    // min-height: 100vh;
-    // grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    // grid-auto-rows: 200px;
-    // grid-auto-flow: row dense;
-    // gap: 1em;
-    // align-items: center;
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2.5em;
+  }
+
+  @include respond-to(mobile-portrait) {
+    & {
+      padding: 0 1em;
+      & .grid-item-tweets {
+        grid-template-columns: 1fr;
+      }
+    }
   }
 }
