--- a/src/components/searchForm/serarchForm.scss
+++ b/src/components/searchForm/serarchForm.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/variables.scss';
+@import '../../styles/base/mixins.scss';
 
 .content-search {
   display: flex;
@@ -36,21 +37,23 @@
         box-shadow: 0 0 5pt 2pt $gs-gray-medium;
         outline-width: 0px;
       }
+    }
+  }
 
-      // &::-webkit-search-cancel-button {
-      //   // -webkit-appearance: none;
+  @include respond-to(mobile-portrait) {
+    & {
+      flex-direction: column;
+      gap: 1em;
+      padding: 1em;
 
-      //   /* Now your own custom styles */
-      //   // height: 10px;
-      //   // width: 10px;
-      //   // background-color: blue;
-      //   // background: red;
-      //   &::before {
-      //     content: 'X';
+      & span {
+        text-align: center;
+        font-size: 30px;
+      }
 
-      //     color: red;
-      //   }
-      // }
+      & .wrap input {
+        width: 100%;
+      }
     }
   }
 }
