--- a/src/components/tweet/viewMore.scss
+++ b/src/components/tweet/viewMore.scss
@@ -1,4 +1,5 @@
 @import '../../styles/base/variables.scss';
+@import '../../styles/base/mixins.scss';
 
 .content-view-more {
   display: flex;
@@ -16,6 +17,12 @@
     text-align: center;
     border-radius: 0 0 5px 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+
+    @include respond-to(mobile-portrait) {
+      & {
+        width: 280px;
+      }
+    }
 
     &.expand {
       max-height: 500px;
