--- a/src/components/notFound/notFound.scss
+++ b/src/components/notFound/notFound.scss
@@ -1,3 +1,5 @@
+@import '../../styles/base/_mixins.scss';
+
 .content-not-found {
   display: flex;
   flex-direction: column;
@@ -11,5 +13,11 @@
     color: #c2c2c2;
     font-size: 80px;
     margin: 0;
+
+    @include respond-to(mobile-portrait) {
+      & {
+        font-size: 40px;
+      }
+    }
   }
 }
