--- a/src/components/tweet/tweet.scss
+++ b/src/components/tweet/tweet.scss
@@ -75,5 +75,9 @@
     justify-content: space-between;
     height: 70px;
     color: $gs-black-medium;
+
+    & > svg {
+      cursor: pointer;
+    }
   }
 }
