--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -2,6 +2,9 @@
 $color-first: #51a5b9;
 $color-second: #cfecf2;
 $color-third: #60b1c1;
+$color-forth: rgb(23, 191, 99);
+$color-fiveth: #9bcef5;
+$color-sixth: #f0ae3f;
 //gray scale
 $gs-white: #ffffff;
 $gs-gray-white: #f1f1f1;
