--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -5,6 +5,8 @@ $color-third: #60b1c1;
 $color-forth: rgb(23, 191, 99);
 $color-fiveth: #9bcef5;
 $color-sixth: #f0ae3f;
+$color-seventh: #ed4337;
+
 //gray scale
 $gs-white: #ffffff;
 $gs-gray-white: #f1f1f1;
