--- a/src/components/tweet/viewMore.scss
+++ b/src/components/tweet/viewMore.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
 
   .view-more-section {
     background: $color-first;
@@ -17,6 +16,7 @@
     text-align: center;
     border-radius: 0 0 5px 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
+    position: relative;
 
     @include respond-to(mobile-portrait) {
       & {
@@ -47,7 +47,7 @@
     }
     & .view-more-section-expand {
       position: absolute;
-      right: 15px;
+      right: 0;
       display: flex;
       align-items: center;
       top: -3px;
